--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="color-scheme" content="dark light" />
+
+    <meta name="description" content="финальный проект блока верстка от ЯП" />
+    <meta
+      name="keywords"
+      content="верстка, финальный проект, последний проект по вёрстке,
+       итог четырёх спринтов, проектная работа, подготовка к работе, я - чистый лист,
+       а если не получится, погоня за идеалом, когда опускаются руки, сейчас я здесь"
+    />
     <title>Закрывающий тег</title>
+
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
+
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
+
     <script src="./scripts/set-theme.js"></script>
   </head>
+
   <body class="page">
     <header class="header">
       <nav class="theme-menu header__theme-menu">
