--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </head>
 
   <body class="page">
-    <header class="header">
+    <header class="header block">
+      <span class="header_logo">&lt;/HTML&gt;</span>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -57,7 +59,13 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <article class="content-card block">
+        <h2 class="content-card__title">
+          Фритрек и нулевой спринт: Подготовка к работе
+        </h2>
+      </article>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
