--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         <h2 class="content-card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
+        <div class="image-section">
+          <span class="label">&lt;/html&gt;</span>
+          <img class="image filter-sepia" src=""
+        </div>
       </article>
     </main>
     <script src="./scripts/like.js"></script>
