--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </h2>
         <div class="content-card__picture">
           <span class="content-card__picture_label">&lt;/html&gt;</span>
-          <picture class="content-card__picture_sprint-zero filter-1">
+          <picture class="content-card__picture_sprint-zero filter_sepia">
             <source
               srcset="./images/ice-cream-mobile.png"
               type="image/png"
