--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="content-card__picture">
-          <span class="content-card__picture_label">&lt;/html&gt;</span>
+          <span class="content-card__picture_label">&lt;suspense&gt;</span>
           <picture class="content-card__picture_sprint-zero filter_sepia">
             <source
               srcset="./images/ice-cream-mobile.png"
