--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </ul>
       </nav>
     </header>
-    <main class="content">
-      <article class="content-card block">
+    <main>
+      <article class="block">
         <h2 class="content-card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
@@ -92,6 +92,14 @@
             знания могут повлиять на ваше будущее.
           </p>
           <p>Место для ваших воспоминаний о начале обучения.</p>
+        </div>
+        <div class="content-card__button">
+          <button type="button" class="card__icon-button">
+            <svg></svg>
+          </button>
+          <button type="button" class="card__like-button">
+            <span class="button__text">Like</span>
+          </button>
         </div>
       </article>
     </main>
