--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </nav>
     </header>
     <main>
-      <article class="block">
+      <article class="article block">
         <h2 class="content-card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
