--- a/index.html
+++ b/index.html
@@ -133,6 +133,26 @@
         </div>
       </article>
     </main>
+    <footer class="footer">
+      <button type="button" class="footer__button">
+        <svg></svg>
+        <span class="footer__button_text">Сохранить на память</span>
+      </button>
+      <dialog class="popup_window">
+        <div class="popup_window_content">
+          <svg></svg>
+          <span class="popup_window_title"
+            >Вставьте дискету, чтобы продолжить</span
+          >
+        </div>
+        <form method="dialog">
+          <button type="submit" class="xxx">
+            <span class="popup_window__button-text">ок</span>
+          </button>
+        </form>
+      </dialog>
+    </footer>
+
     <script src="./scripts/like.js"></script>
   </body>
 </html>
