--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
               />
             </svg>
           </button>
-          <button type="button" class="card__like-button">
+          <button type="button" class="button_global-style card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <button type="button" class="footer__button">
+      <button type="button" class="button_global-style footer__button">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="21"
