--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
               height="24"
               fill="none"
               viewBox="0 0 27 24"
+              class="like-icon"
             >
               <path
                 fill="var(--text-color, rgba(0, 0, 0, 1))"
