--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         </div>
       </article>
     </main>
-    <footer class="footer">
-      <button type="button" class="button_global-style footer__button">
+    <article class="save-dialog">
+      <button type="button" class="button_global-style save-dialog__button">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="21"
@@ -159,12 +159,12 @@
           >
         </div>
         <form method="dialog">
-          <button type="submit" class="xxx">
+          <button type="submit">
             <span class="button__text">ок</span>
           </button>
         </form>
       </dialog>
-    </footer>
+    </article>
 
     <script src="./scripts/like.js"></script>
   </body>
