--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       <span class="header__logo">&lt;/HTML&gt;</span>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
-        <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
             <button type="button" data-theme="dark" class="theme-menu__button">
@@ -59,6 +58,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <article class="article block">
         <h2 class="content-card__title">
@@ -135,8 +135,14 @@
         </div>
       </article>
     </main>
+
     <article class="save-dialog">
-      <button type="button" class="button_global-style save-dialog__button">
+      <button
+        type="button"
+        class="button_global-style save-dialog__button"
+        onclick="window['popup'].showModal()"
+        aria-controls="popup"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="21"
@@ -152,15 +158,27 @@
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-      <dialog class="popup_window">
+      <dialog id="popup" class="popup_window">
         <div class="popup_window_content">
-          <svg></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="21"
+            fill="none"
+            viewBox="0 0 21 21"
+            class="floppy-icon"
+          >
+            <path
+              fill="#ffffff"
+              d="M0 0h1.615v1.615H0zm0 1.615h1.615V3.23H0zm0 1.616h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.616h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.616h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.616h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.615h1.615v1.615H0zm0 1.616h1.615V21H0zM17.77-.001v1.615h-1.615V-.001zM16.154 0v1.615h-1.615V0zm-1.615 0v1.615h-1.615V0zm-1.616 0v1.615h-1.615V0zm-1.615 0v1.615H9.693V0zM9.692 0v1.615H8.077V0zM8.077 0v1.615H6.462V0zM6.462 0v1.615H4.847V0zM4.846 0v1.615H3.231V0zM3.23.001v1.615H1.615V.001zm16.155 1.614V3.23H17.77V1.615zM4.846 3.231v1.615H3.231V3.231zm0-1.616V3.23H3.231V1.615zm0 3.231v1.615H3.231V4.846zm11.308-1.615v1.615h-1.615V3.231zm0-1.616V3.23h-1.615V1.615zm0 3.231v1.615h-1.615V4.846zm-3.231-1.615v1.615h-1.615V3.231zm0-1.616V3.23h-1.615V1.615zm0 3.231v1.615h-1.615V4.846zm3.231 1.615v1.615h-1.615V6.461zm-1.615 0v1.615h-1.615V6.461zm-1.616 0v1.615h-1.615V6.461zm-1.615 0v1.615H9.693V6.461zm-1.616 0v1.615H8.077V6.461zm-1.615 0v1.615H6.462V6.461zm-1.615 0v1.615H4.847V6.461zm-1.616 0v1.615H3.231V6.461zm12.924 4.846v1.615h-1.615v-1.615zm-1.616.001v1.615h-1.615v-1.615zm-1.615 0v1.615h-1.615v-1.615zm-1.616 0v1.615h-1.615v-1.615zm-1.615 0v1.615H9.693v-1.615zm-1.616 0v1.615H8.077v-1.615zm-1.615 0v1.615H6.462v-1.615zm-1.615 0v1.615H4.847v-1.615zm-1.616 0v1.615H3.231v-1.615zm12.924 1.614v1.615h-1.615v-1.615zm-12.924.001v1.615H3.231v-1.615zm12.924 1.615v1.615h-1.615v-1.615zm-12.924.001v1.615H3.231v-1.615zm12.924 1.614v1.615h-1.615v-1.615zm-12.924.001v1.615H3.231v-1.615zm0 1.615v1.615H3.231v-1.615zm12.924-.001v1.615h-1.615v-1.615zm1.615 1.617V21H17.77v-1.615zm-1.615-.001v1.615h-1.615v-1.615zm-1.616.001V21h-1.615v-1.615zm-1.615 0V21h-1.615v-1.615zm-1.616 0V21h-1.615v-1.615zm-1.615 0V21H9.693v-1.615zm-1.616 0V21H8.077v-1.615zm-1.615 0V21H6.462v-1.615zm-1.615 0V21H4.847v-1.615zm-1.616 0V21H3.231v-1.615zm-1.616.001v1.615H1.615v-1.615zM21 21h-1.615v-1.615H21zm0-1.615h-1.615V17.77H21zm0-1.616h-1.615v-1.615H21zm0-1.615h-1.615v-1.615H21zm0-1.615h-1.615v-1.615H21zm0-1.616h-1.615v-1.615H21zm0-1.615h-1.615V9.693H21zm0-1.616h-1.615V8.077H21zm0-1.615h-1.615V6.462H21zm0-1.616h-1.615V4.846H21zm0-1.615h-1.615V3.231H21z"
+            />
+          </svg>
           <span class="popup_window_title"
             >Вставьте дискету, чтобы продолжить</span
           >
         </div>
         <form method="dialog">
-          <button type="submit">
+          <button type="submit" class="button_global-style">
             <span class="button__text">ок</span>
           </button>
         </form>
