--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/media.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
 
@@ -60,13 +61,13 @@
     </header>
 
     <main>
-      <article class="article block">
+      <article class="block">
         <h2 class="content-card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
-        <div class="content-card__picture">
+        <div class="content-card__picture-container">
           <span class="content-card__picture_label">&lt;suspense&gt;</span>
-          <picture class="content-card__picture_sprint-zero filter_sepia">
+          <picture>
             <source
               srcset="./images/ice-cream-mobile.png"
               type="image/png"
@@ -78,7 +79,7 @@
               media="(min-width: 376px)"
             />
             <img
-              class="picture"
+              class="content-card__picture filter_grayscale"
               src="./images/ice-cream.png"
               alt="улыбаюшаяся желтая миска с прищуренными глазами."
               loading="lazy"
@@ -93,7 +94,7 @@
           </p>
           <p>Место для ваших воспоминаний о начале обучения.</p>
         </div>
-        <div class="content-card__button">
+        <div class="content-card__button-container">
           <button type="button" class="card__icon-button">
             <svg
               width="39"
@@ -148,18 +149,18 @@
 
       <span class="button__text">Сохранить на память</span>
     </button>
-    <dialog id="popup" class="popup_window">
-      <div class="popup_window_content">
-        <svg class="popup_floppy-icon">
+    <dialog id="popup" class="popup_window_container">
+      <div class="popup_window__content_container">
+        <svg class="popup_window__floppy-icon">
           <use xlink:href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="popup_window_title"
+        <span class="popup_window__title"
           >Вставьте дискету, чтобы продолжить</span
         >
       </div>
 
       <form method="dialog">
-        <button type="submit" class="button_global-style popup-button">
+        <button type="submit" class="button_global-style popup_window__button">
           <span class="button__text">ок</span>
         </button>
       </form>
@@ -168,5 +169,3 @@
     <script src="./scripts/like.js"></script>
   </body>
 </html>
-
-<!-- НЕ ЗАБЫТЬ ВСТАВИТЬ ДИСКЕТУ ЧЕРЕЗ USE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
