--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_sepia"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -92,9 +92,10 @@
               <p>
                 Это было самое начало пути. На этом этапе важно было
                 проникнуться основами и настроиться на учёбу. И, возможно,
-                подумать, как новые знания могут повлиять на ваше будущее.
+                подумать, как новые знания могут повлиять на ваше будущее
+                xxxxxxxxx.
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний о начале обучения.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -146,7 +147,7 @@
           <article class="block">
             <h2 class="content-card__title">1 спринт: Я — чистый лист</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;sponge&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -159,7 +160,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter__brightness"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -175,7 +176,7 @@
                 вопросы: с чего начать? а вдруг будет слишком сложно? что, если
                 я не справлюсь?
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний о начале первого спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -227,7 +228,7 @@
           <article class="block">
             <h2 class="content-card__title">1 спринт: А если не получится?</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;negation&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -253,7 +254,7 @@
                 Радость могла быстро померкнуть и смениться ожиданием провала.
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний об окончании первого спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -305,7 +306,7 @@
           <article class="block">
             <h2 class="content-card__title">2 спринт: Погоня за идеалом</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;infinity&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -318,7 +319,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_saturate"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -333,7 +334,7 @@
                 вовсе и не подвержены перфекционизму и вместо того, чтобы
                 сделать идеально, старались просто сделать.
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний о начале второго спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -385,7 +386,7 @@
           <article class="block">
             <h2 class="content-card__title">2 спринт: О тех, кто рядом</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;family&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -398,7 +399,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_contrast"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -414,7 +415,7 @@
                 поддавался. Осваивать что-то новое легче, когда рядом есть
                 единомышленники, не правда ли?
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний об окончании второго спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -466,7 +467,7 @@
           <article class="block">
             <h2 class="content-card__title">3 спринт: Обходные стратегии</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;versatile&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -479,7 +480,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_blur"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -492,7 +493,7 @@
                 момент вам могло показаться, что решения просто иссякли. Значит,
                 пришло время посмотреть на задачу под другим углом.
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний о начале третьего спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -544,7 +545,7 @@
           <article class="block">
             <h2 class="content-card__title">3 спринт: Когда опускаются руки</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;awakening&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -557,7 +558,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_invert"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -572,7 +573,7 @@
                 пожить. В такие моменты очень нужна концентрация. Вспомните,
                 откуда вы её черпали.
               </p>
-              <p>Место для ваших воспоминаний.</p>
+              <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -624,7 +625,7 @@
           <article class="block">
             <h2 class="content-card__title">«Сейчас я здесь»</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label">&lt;inception&gt;</span>
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -637,7 +638,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_mishmash"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
