--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               Фритрек и нулевой спринт: Подготовка к работе
             </h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;suspense&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;suspense&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -84,7 +86,6 @@
                   class="content-card__picture filter_sepia"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
-                  loading="lazy"
                 />
               </picture>
             </div>
@@ -147,7 +148,9 @@
           <article class="block">
             <h2 class="content-card__title">1 спринт: Я — чистый лист</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;sponge&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;sponge&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -228,7 +231,9 @@
           <article class="block">
             <h2 class="content-card__title">1 спринт: А если не получится?</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;negation&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;negation&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -306,7 +311,9 @@
           <article class="block">
             <h2 class="content-card__title">2 спринт: Погоня за идеалом</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;infinity&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;infinity&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -386,7 +393,9 @@
           <article class="block">
             <h2 class="content-card__title">2 спринт: О тех, кто рядом</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;family&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;family&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -467,7 +476,9 @@
           <article class="block">
             <h2 class="content-card__title">3 спринт: Обходные стратегии</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;versatile&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;versatile&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -545,7 +556,9 @@
           <article class="block">
             <h2 class="content-card__title">3 спринт: Когда опускаются руки</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;awakening&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;awakening&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
@@ -625,7 +638,9 @@
           <article class="block">
             <h2 class="content-card__title">«Сейчас я здесь»</h2>
             <div class="content-card__picture-container">
-              <span class="content-card__picture_label">&lt;inception&gt;</span>
+              <span class="content-card__picture_label" aria-hidden="true"
+                >&lt;inception&gt;</span
+              >
               <picture>
                 <source
                   srcset="./images/ice-cream-mobile.png"
