--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/pre-start-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/pre-start.jpg"
+                  type="image/jpg"
                   media="(min-width: 376px)"
                 />
                 <img
                   class="content-card__picture filter_sepia"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  src="./images/pre-start.jpg"
+                  alt="юный Энакин Скайуокер готовит спидер к гонкам."
                 />
               </picture>
             </div>
@@ -153,18 +153,18 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/first_start-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/first_start.jpg"
+                  type="image/jpg"
                   media="(min-width: 376px)"
                 />
                 <img
                   class="content-card__picture filter__brightness"
-                  src="./images/ice-cream.png"
+                  src="./images/first_start.jpg"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
                 />
