--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter__brightness"
+                  class="content-card__picture filter__contrast"
                   src="./images/first_start.jpg"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -398,19 +398,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/around-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/around.jpg"
+                  type="image/jpg"
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_contrast"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  class="content-card__picture filter_brightness"
+                  src="./images/around.jpg"
+                  alt="стройные ряды имперских штурмовиков на фоне взлетающих звездеых разрушителей"
                   loading="lazy"
                 />
               </picture>
@@ -561,19 +561,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/hands-mobile.gif"
+                  type="image/gif"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/hands.gif"
+                  type="image/gif"
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_invert"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  class="content-card__picture filter_mishmash"
+                  src="./images/hands.gif"
+                  alt="гиф Дарт Сидиус выпускающий молнии силы"
                   loading="lazy"
                 />
               </picture>
@@ -653,7 +653,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_mishmash"
+                  class="content-card__picture filter_invert"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
