--- a/index.html
+++ b/index.html
@@ -643,19 +643,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/now_here-mobile.gif"
+                  type="image/gif"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/now_here.gif"
+                  type="image/gif"
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_invert"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  class="content-card__picture filter_saturate"
+                  src="./images/now_here.gif"
+                  alt=" гиф 'рождение' Дарт Вейдера"
                   loading="lazy"
                 />
               </picture>
