--- a/index.html
+++ b/index.html
@@ -481,19 +481,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/workaround-mobile.gif"
+                  type="image/gif"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/workaround.gif"
+                  type="image/gif"
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_blur"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  class="content-card__picture filter_brightness"
+                  src="./images/workaround.gif"
+                  alt="гиф Энакин Скайуокер выпрыгивает из спидера"
                   loading="lazy"
                 />
               </picture>
