--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/around.jpg"
-                  type="image/jpg"
+                  srcset="./images/around.gif"
+                  type="image/gif"
                   media="(min-width: 376px)"
                 />
                 <img
                   class="content-card__picture filter_brightness"
-                  src="./images/around.jpg"
+                  src="./images/around.gif"
                   alt="стройные ряды имперских штурмовиков на фоне взлетающих звездеых разрушителей"
                   loading="lazy"
                 />
@@ -481,8 +481,8 @@
               >
               <picture>
                 <source
-                  srcset="./images/workaround-mobile.gif"
-                  type="image/gif"
+                  srcset="./images/workaround-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
@@ -561,8 +561,8 @@
               >
               <picture>
                 <source
-                  srcset="./images/hands-mobile.gif"
-                  type="image/gif"
+                  srcset="./images/hands-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
