--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_sepia"
+                  class="content-card__picture filter_pre-start"
                   src="./images/pre-start.jpg"
                   alt="юный Энакин Скайуокер готовит спидер к гонкам."
                 />
@@ -163,7 +163,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter__contrast"
+                  class="content-card__picture filter_first_start"
                   src="./images/first_start.jpg"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -246,7 +246,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_grayscale"
+                  class="content-card__picture filter_fail"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -326,7 +326,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_saturate"
+                  class="content-card__picture filter_ideal"
                   src="./images/ice-cream.png"
                   alt="улыбаюшаяся желтая миска с прищуренными глазами."
                   loading="lazy"
@@ -408,7 +408,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_brightness"
+                  class="content-card__picture filter_around"
                   src="./images/around.gif"
                   alt="стройные ряды имперских штурмовиков на фоне взлетающих звездеых разрушителей"
                   loading="lazy"
@@ -491,7 +491,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_brightness"
+                  class="content-card__picture filter_workaround"
                   src="./images/workaround.gif"
                   alt="гиф Энакин Скайуокер выпрыгивает из спидера"
                   loading="lazy"
@@ -571,7 +571,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_mishmash"
+                  class="content-card__picture filter_hands"
                   src="./images/hands.gif"
                   alt="гиф Дарт Сидиус выпускающий молнии силы"
                   loading="lazy"
@@ -653,7 +653,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_saturate"
+                  class="content-card__picture filter_now_here"
                   src="./images/now_here.gif"
                   alt=" гиф 'рождение' Дарт Вейдера"
                   loading="lazy"
