--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <img
                   class="content-card__picture filter_first_start"
                   src="./images/first_start.jpg"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  alt="Энакин Скайуокер отправляется на первое задание"
                   loading="lazy"
                 />
               </picture>
@@ -236,19 +236,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/fail-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/fail.jpg"
+                  type="image/jpg"
                   media="(min-width: 376px)"
                 />
                 <img
                   class="content-card__picture filter_fail"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  src="./images/fail.jpg"
+                  alt="Джа-Джа Бинкс с задумчивым видом."
                   loading="lazy"
                 />
               </picture>
@@ -316,19 +316,19 @@
               >
               <picture>
                 <source
-                  srcset="./images/ice-cream-mobile.png"
-                  type="image/png"
+                  srcset="./images/ideal-mobile.jpg"
+                  type="image/jpg"
                   media="(max-width: 376px)"
                 />
                 <source
-                  srcset="./images/ice-cream.png"
-                  type="image/png"
+                  srcset="./images/ideal.jpg"
+                  type="image/jpg"
                   media="(min-width: 376px)"
                 />
                 <img
                   class="content-card__picture filter_ideal"
-                  src="./images/ice-cream.png"
-                  alt="улыбаюшаяся желтая миска с прищуренными глазами."
+                  src="./images/ideal.jpg"
+                  alt="магистр Йода"
                   loading="lazy"
                 />
               </picture>
