--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_pre-start"
+                  class="content-card__picture filter_sepia"
                   src="./images/pre-start.jpg"
                   alt="юный Энакин Скайуокер готовит спидер к гонкам."
                 />
@@ -163,7 +163,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_first_start"
+                  class="content-card__picture filter_blur"
                   src="./images/first_start.jpg"
                   alt="Энакин Скайуокер отправляется на первое задание"
                   loading="lazy"
@@ -246,7 +246,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_fail"
+                  class="content-card__picture filter_grayscale"
                   src="./images/fail.jpg"
                   alt="Джа-Джа Бинкс с задумчивым видом."
                   loading="lazy"
@@ -326,7 +326,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_ideal"
+                  class="content-card__picture filter_contrast"
                   src="./images/ideal.jpg"
                   alt="магистр Йода"
                   loading="lazy"
@@ -408,7 +408,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_around"
+                  class="content-card__picture filter_brght-satur"
                   src="./images/around.gif"
                   alt="стройные ряды имперских штурмовиков на фоне взлетающих звездеых разрушителей"
                   loading="lazy"
@@ -491,7 +491,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_workaround"
+                  class="content-card__picture filter_brightness"
                   src="./images/workaround.gif"
                   alt="гиф Энакин Скайуокер выпрыгивает из спидера"
                   loading="lazy"
@@ -571,7 +571,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_hands"
+                  class="content-card__picture filter_mishmash"
                   src="./images/hands.gif"
                   alt="гиф Дарт Сидиус выпускающий молнии силы"
                   loading="lazy"
@@ -653,7 +653,7 @@
                   media="(min-width: 376px)"
                 />
                 <img
-                  class="content-card__picture filter_now_here"
+                  class="content-card__picture filter_saturate"
                   src="./images/now_here.gif"
                   alt=" гиф 'рождение' Дарт Вейдера"
                   loading="lazy"
