--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
               <p>
                 Это было самое начало пути. На этом этапе важно было
                 проникнуться основами и настроиться на учёбу. И, возможно,
-                подумать, как новые знания могут повлиять на ваше будущее
-                xxxxxxxxx.
+                подумать, как новые знания могут повлиять на ваше будущее.
               </p>
-              <p>Место для ваших воспоминаний о начале обучения.</p>
+              <blockquote>
+                Знаешь, я и сам пилот. И когда-нибудь я улечу отсюда прочь.
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -179,7 +180,10 @@
                 вопросы: с чего начать? а вдруг будет слишком сложно? что, если
                 я не справлюсь?
               </p>
-              <p>Место для ваших воспоминаний о начале первого спринта.</p>
+              <blockquote>
+                Я не чуствовал в тебе такого напряжения с тех пор как мы
+                свалились в гнездо гандорков.
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -259,7 +263,9 @@
                 Радость могла быстро померкнуть и смениться ожиданием провала.
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
-              <p>Место для ваших воспоминаний об окончании первого спринта.</p>
+              <blockquote>
+                Ихняя вас надувай! Путь через ядро планеты - большоой бум-бум...
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -341,7 +347,7 @@
                 вовсе и не подвержены перфекционизму и вместо того, чтобы
                 сделать идеально, старались просто сделать.
               </p>
-              <p>Место для ваших воспоминаний о начале второго спринта.</p>
+              <blockquote>Делай. Или не делай. Никаких попыток.</blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -424,7 +430,10 @@
                 поддавался. Осваивать что-то новое легче, когда рядом есть
                 единомышленники, не правда ли?
               </p>
-              <p>Место для ваших воспоминаний об окончании второго спринта.</p>
+              <blockquote>
+                Клоны выращиваются, а не собираются. Они гораздо надежнее
+                дройдов.
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -504,7 +513,10 @@
                 момент вам могло показаться, что решения просто иссякли. Значит,
                 пришло время посмотреть на задачу под другим углом.
               </p>
-              <p>Место для ваших воспоминаний о начале третьего спринта.</p>
+              <blockquote>
+                Да летать-то пожалуйста, но то что вытворяешь ты - это просто
+                самоубийство!
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -586,7 +598,9 @@
                 пожить. В такие моменты очень нужна концентрация. Вспомните,
                 откуда вы её черпали.
               </p>
-              <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
+              <blockquote>
+                Ты выполняешь свое предназначение. Великим ситхом ты станешь.
+              </blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -669,10 +683,7 @@
                 полностью не получится, но это тот случай, когда важен сам
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
-              <p>
-                Место, чтобы остановиться, подумать и написать, что вы
-                чувствуете в этой точке пути.
-              </p>
+              <blockquote>Да пребудет с нами Сила...</blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
